remove button group

--- a/demo/ButtonDemo.less
+++ b/demo/ButtonDemo.less
@@ -5,3 +5,11 @@
  * Copyright 2014-2015, Uxcore Team, Alinw.
  * All rights reserved.
  */
+
+ h2 {
+    font-size: 24px;
+ }
+
+ .kuma-button {
+    margin-right: 20px;
+ }
