--- a/demo/ButtonDemo.less
+++ b/demo/ButtonDemo.less
@@ -1,6 +1,6 @@
 /**
  * Button Component Demo Style for Uxcore
- * @author 
+ * @author
  *
  * Copyright 2014-2015, Uxcore Team, Alinw.
  * All rights reserved.
@@ -12,4 +12,8 @@
 
  .kuma-button {
     margin-right: 20px;
+ }
+
+ * {
+     box-sizing: border-box;
  }
