--- a/src/Button.less
+++ b/src/Button.less
@@ -6,35 +6,10 @@
  * All rights reserved.
  */
 
-@import "../node_modules/uxcore-kuma/src/less/variables";
+@import "../node_modules/uxcore-kuma/src/variables";
 
 @buttonPrefix: kuma-button;
 .@{buttonPrefix} {
-
-    // background
-    @primary-color: #f90;
-    @secondary-color: #f2f2f2;
-    @disabled-color: #ccc;
-    @primary-hover: #f80;
-    @secondary-hover: #f90;
-    @disabled-hover: #ccc;
-
-    // border
-    @primary-border-color: #f80;
-    @secondary-border-color: #ccc;
-    @disabled-border-color: #b6b6b6;
-    @primary-border-hover: #f60;
-    @secondary-border-hover: #f80;
-    @disabled-border-hover: #b6bb66;
-
-    // text
-    @primary-text-color: #fff;
-    @secondary-text-color: #666;
-    @disabled-text-color: #999;
-    @primary-text-hover: #fff;
-    @secondary-text-hover: #fff;
-    @disabled-text-hover: #999;
-
     display: inline-block;
     padding: 0 15px;
     height: 30px;
@@ -46,13 +21,13 @@
     cursor: pointer;
 
     .default-button() {
-        background-color: @primary-color;
-        border: 1px solid @primary-border-color;
-        color: @primary-text-color;
+        background-color: @btn-primary-color;
+        border: 1px solid @btn-primary-border-color;
+        color: @btn-primary-text-color;
         &:hover {
-            background-color: @primary-hover;
-            border: 1px solid @primary-border-hover;
-            color: @primary-text-hover;
+            background-color: @btn-primary-hover;
+            border: 1px solid @btn-primary-border-hover;
+            color: @btn-primary-text-hover;
         }
     }
     .default-button;
@@ -61,26 +36,26 @@
         .default-button;
     }
     &-secondary {
-        background-color: @secondary-color;
-        border: 1px solid @secondary-border-color;
-        color: @secondary-text-color;
+        background-color: @btn-secondary-color;
+        border: 1px solid @btn-secondary-border-color;
+        color: @btn-secondary-text-color;
         &:hover {
-            background-color: @secondary-hover;
-            border: 1px solid @secondary-border-hover;
-            color: @secondary-text-hover;
+            background-color: @btn-secondary-hover;
+            border: 1px solid @btn-secondary-border-hover;
+            color: @btn-secondary-text-hover;
         }
     }
     &-disabled {
-        background-color: @disabled-color;
-        border: 1px solid @disabled-border-color;
-        color: @disabled-text-color;
+        background-color: @btn-disabled-color;
+        border: 1px solid @btn-disabled-border-color;
+        color: @btn-disabled-text-color;
         &:hover {
-            background-color: @disabled-hover;
-            border: 1px solid @disabled-border-hover;
-            color: @disabled-text-hover;
+            background-color: @btn-disabled-hover;
+            border: 1px solid @btn-disabled-border-hover;
+            color: @btn-disabled-text-hover;
         }
 
-        cursor: not-allowed;
+        cursor: @cursor-disabled;
     }
 
     &-lg {
@@ -94,5 +69,92 @@
         height: 22px;
         font-size: 12px;
         line-height: 20px;
+    }
+}
+
+//===+++ Segment Button
+.kuma-segment-button {
+    display: inline-block;
+
+    li {
+        display: inline-block;
+        padding: 0 5px;
+        height: 25px;
+        line-height: 23px;
+        background-color: @btn-segment-bg;
+        border-top: 1px solid @btn-segment-border;
+        border-bottom: 1px solid @btn-segment-border;
+        cursor: pointer;
+
+        &:hover{
+            background-color: @btn-segment-hover-bg;
+            border-color: @btn-segment-hover-border !important;
+            color: @btn-segment-hover-color;
+        }
+
+        &.selected{
+            background-color: @btn-segment-hover-bg;
+            border-color: @btn-segment-hover-border !important;
+            color: @btn-segment-hover-color;
+        }
+
+        &.first{
+            border-left: 1px solid @btn-segment-border;
+            border-top-left-radius: 3px;
+            border-bottom-left-radius: 3px;
+        }
+
+        &.last{
+            border-right: 1px solid @btn-segment-border;
+            border-top-right-radius: 3px;
+            border-bottom-right-radius: 3px;
+        }
+    }
+}
+
+//====+++**** Switch Button
+.kuma-switch-button {
+    margin-left: 10px;
+    color: @btn-switch-color;
+    position: relative;
+    width: 55px;
+    height: 18px;
+    line-height: 16px;
+    border-radius: 11px;
+    border: 1px solid @btn-switch-border;
+    cursor: pointer;
+    .kuma-switch-txt {
+        position: absolute;
+        top: 0;
+    }
+    .kuma-switch-circle{
+        position: absolute;
+        top: 1px;
+        width: 14px;
+        height: 14px;
+        border-radius: 8px;
+    }
+    &.close {
+        background-color: @btn-switch-close-bg;
+        .kuma-switch-txt{
+            left: 6px;
+            color: @btn-switch-close-text-color;
+        }
+        .kuma-switch-circle{
+            right: 4px;
+            background-color: @btn-switch-close-circle-bg;
+        }
+    }
+    &.open {
+        background-color: @btn-switch-open-bg;
+        border-color: @btn-switch-open-border;
+        .kuma-switch-txt{
+            color: @btn-switch-open-text-color;
+            right: 6px;
+        }
+        .kuma-switch-circle{
+            background-color: @btn-switch-open-circle-bg;
+            left: 4px;
+        }
     }
 }
