--- a/demo/ButtonDemo.less
+++ b/demo/ButtonDemo.less
@@ -5,18 +5,15 @@
  * Copyright 2014-2015, Uxcore Team, Alinw.
  * All rights reserved.
  */
+ 
+@import '../style/kuma-base/variable.less';
+@import '../style/kuma-base/core.less';
 
- h2 {
+h2 {
     font-size: 24px;
- }
+}
 
- .kuma-button {
-    margin-right: 20px;
- }
+* {
+    box-sizing: border-box;
+}
 
- * {
-     box-sizing: border-box;
- }
-
-@import "../node_modules/uxcore-kuma/src/variables";
-@import "../src/Button.less";
