--- a/src/Button.less
+++ b/src/Button.less
@@ -5,90 +5,24 @@
  * Copyright 2014-2015, Uxcore Team, Alinw.
  * All rights reserved.
  */
-
-//===+++ Segment Button
-.kuma-segment-button {
-    display: inline-block;
-
-    li {
-        display: inline-block;
-        padding: 0 5px;
-        height: 25px;
-        line-height: 23px;
-        background-color: @btn-segment-bg;
-        border-top: 1px solid @btn-segment-border;
-        border-bottom: 1px solid @btn-segment-border;
-        cursor: pointer;
-
-        &:hover{
-            background-color: @btn-segment-hover-bg;
-            border-color: @btn-segment-hover-border !important;
-            color: @btn-segment-hover-color;
-        }
-
-        &.selected{
-            background-color: @btn-segment-hover-bg;
-            border-color: @btn-segment-hover-border !important;
-            color: @btn-segment-hover-color;
-        }
-
-        &.first{
-            border-left: 1px solid @btn-segment-border;
-            border-top-left-radius: 3px;
-            border-bottom-left-radius: 3px;
-        }
-
-        &.last{
-            border-right: 1px solid @btn-segment-border;
-            border-top-right-radius: 3px;
-            border-bottom-right-radius: 3px;
-        }
-    }
-}
-
-//====+++**** Switch Button
-.kuma-switch-button {
-    margin-left: 10px;
-    color: @btn-switch-color;
+ @keyframes rotation {
+     0% {
+        transform: rotate(0);
+     }
+     100% {
+        transform: rotate(360deg);
+     }
+ }
+.kuma-button-loading {
     position: relative;
-    width: 55px;
-    height: 18px;
-    line-height: 16px;
-    border-radius: 11px;
-    border: 1px solid @btn-switch-border;
-    cursor: pointer;
-    .kuma-switch-txt {
+    .loading-icon {
         position: absolute;
-        top: 0;
-    }
-    .kuma-switch-circle{
-        position: absolute;
-        top: 1px;
-        width: 14px;
-        height: 14px;
-        border-radius: 8px;
-    }
-    &.close {
-        background-color: @btn-switch-close-bg;
-        .kuma-switch-txt{
-            left: 6px;
-            color: @btn-switch-close-text-color;
-        }
-        .kuma-switch-circle{
-            right: 4px;
-            background-color: @btn-switch-close-circle-bg;
-        }
-    }
-    &.open {
-        background-color: @btn-switch-open-bg;
-        border-color: @btn-switch-open-border;
-        .kuma-switch-txt{
-            color: @btn-switch-open-text-color;
-            right: 6px;
-        }
-        .kuma-switch-circle{
-            background-color: @btn-switch-open-circle-bg;
-            left: 4px;
-        }
+        left: 50%;
+        top: 50%;
+        margin: -8px 0 0 -8px;
+        width: 16px;
+        height: 16px;
+        animation: rotation linear 2s;
+        animation-iteration-count: infinite;
     }
 }
