--- a/demo/ButtonDemo.less
+++ b/demo/ButtonDemo.less
@@ -15,5 +15,6 @@ html {
 @import '../node_modules/kuma-base/theme/orange.less';
 @import "../node_modules/kuma-base/core/scaffolding.less";
 @import "../node_modules/kuma-base/core/button.less";
+@import "../node_modules/uxcore-icon/src/Icon.less";
 @import '../src/Button.less';
 
