--- a/src/Button.less
+++ b/src/Button.less
@@ -17,6 +17,13 @@
   }
 }
 
+.@{__buttonPrefixCls} {
+  > icon {
+    margin-right: 8px;
+    vertical-align: middle;
+  }
+}
+
 .@{__buttonPrefixCls}-loading {
   position: relative;
 }
@@ -27,11 +34,43 @@
   animation: rotation linear 2s;
   animation-iteration-count: infinite;
   vertical-align: middle;
+  fill: white;
 }
+
+.@{__buttonPrefixCls}-outline {
+  .@{__buttonPrefixCls}-loading-icon {
+    fill: @brand-primary;
+  }
+}
+.@{__buttonPrefixCls}-secondary {
+  .@{__buttonPrefixCls}-loading-icon {
+    fill: @normal-alpha-2;
+  }
+}
+
+.@{__buttonPrefixCls}-lg {
+  .@{__buttonPrefixCls}-loading-icon {
+    width: 20px;
+    height: 20px;
+  }
+  > icon {
+    font-size: 20px;
+  }
+}
+.@{__buttonPrefixCls}-sm {
+  .@{__buttonPrefixCls}-loading-icon {
+    width: 14px;
+    height: 14px;
+  }
+  > icon {
+    font-size: 14px;
+  }
+}
+
 
 .@{__buttonPrefixCls}-has-icon {
     > span {
-        margin-left: 5px;
+        margin-left: 8px;
         vertical-align: middle;
     }
 }
