--- a/src/Button.less
+++ b/src/Button.less
@@ -31,6 +31,7 @@
 .@{__buttonPrefixCls}-loading-icon {
   width: 16px;
   height: 16px;
+  margin-right: 8px;
   animation: rotation linear 2s;
   animation-iteration-count: infinite;
   vertical-align: middle;
@@ -65,12 +66,4 @@
   > icon {
     font-size: 14px;
   }
-}
-
-
-.@{__buttonPrefixCls}-has-icon {
-    > span {
-        margin-left: 8px;
-        vertical-align: middle;
-    }
 }
