--- a/demo/ButtonDemo.less
+++ b/demo/ButtonDemo.less
@@ -5,16 +5,14 @@
  * Copyright 2014-2015, Uxcore Team, Alinw.
  * All rights reserved.
  */
-html {
-    box-sizing: border-box;
-    * {
-        box-sizing: inherit;
-    }
-}
 
 @import '../node_modules/kuma-base/theme/orange.less';
 @import "../node_modules/kuma-base/core/scaffolding.less";
 @import "../node_modules/kuma-base/core/button.less";
 @import "../node_modules/uxcore-icon/src/Icon.less";
 @import '../src/Button.less';
+
+.kuma-button {
+    margin-right: 12px;
+}
 
