--- a/demo/ButtonDemo.less
+++ b/demo/ButtonDemo.less
@@ -7,10 +7,10 @@
  */
 
 @import '../node_modules/kuma-base/theme/orange.less';
-@import "../node_modules/kuma-base/core/scaffolding.less";
-@import "../node_modules/kuma-base/core/button.less";
+// @import "../node_modules/kuma-base/core/scaffolding.less";
+// @import "../node_modules/kuma-base/core/button.less";
 @import "../node_modules/uxcore-icon/src/Icon.less";
-@import '../src/Button.less';
+// @import '../src/Button.less';
 
 .kuma-button {
     margin-right: 12px;
