[feat] add new button type： text

--- a/src/Button.less
+++ b/src/Button.less
@@ -49,6 +49,17 @@
   }
 }
 
+.@{__buttonPrefixCls}-text {
+  color: #000;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  &:hover {
+    color: @brand-primary;
+  }
+}
+
+
 .@{__buttonPrefixCls}-lg {
   .@{__buttonPrefixCls}-loading-icon {
     width: 20px;
